# university

./: .gitignore
.github/ISSUE_TEMPLATE/: feature_request.md
3G-1S/Data Mining/: _조이수[재학_컴퓨터공학전공]_homework_3_2023_student.ipynb  _조이수[재학_컴퓨터공학전공]_homework_3_perceptron_2023_student.ipynb  linear_algebra.py
3G-1S/computer-architecture/hw2/: hw2.c  trace1.txt  trace2.txt
3G-1S/data-mining/: _조이수[재학_컴퓨터공학전공]_homework_3_2023_student.ipynb  gradient_descent.py
3G-1S/data-mining/ch9/: ch9_getting_data-2023-student-inclass.ipynb
3G-1S/design-pattern/: 설계패턴_발표자료_202103316_조이수.pptx
3G-1S/design-pattern/bridge-pattern/: game.py
3G-1S/system-programming/: mypipe  mypipe-sample.c  mypipe.c  tolower  toupper.c
3G-1S/system_programming/: CMakeLists.txt  toupper
3G-1S/system_programming/message-queue-assginment/: client  client.c  server  server.c
3G-1S/system_programming/record-lock-assginment/: record-lock-ver2.c  record-lock.c  sp-hw2-ver2.c  sp-hw2.c  test.c
3G-1S/system_programming/sp-hw3/: client.c  server.c
3G-2S/compiler-construction/: lex.yy.c  source.txt  test.l  test2.l  test3.l
3G-2S/operating-system/: XV6-log.md
3G_1S/Data Mining/: homework_2_202103316_조이수.ipynb
3G_1S/System Programming/: test.txt  tolower.c  toupper.c
3G_1S/computer_architecture/: my_map.s  mymap.s  mymap2.s
3G_1S/data_mining/: _조이수[재학_컴퓨터공학전공]_homework_3_2023_student.ipynb  _조이수[재학_컴퓨터공학전공]_homework_3_perceptron_2023_student.ipynb
3G_1S/design_pattern/bridge-pattern/: MyVector.py  game copy.py  game.py
3G_1S/system_programming/: tolower.c
(+9 files in other folders)
